# drone

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  example.env  pyproject.toml  requirements.txt
drone/: common.py  emergency.py  index.py  land.py  lib.py  main.py  scripts.py  utils.py  wifi.py
drone/functions/: around.py  back.py  circle.py  curve.py  down.py  forward.py  go_through.py  go_through_predefined_heights.py  land.py  left.py  right.py  rotate.py  snake.py  tunnel.py  up.py
drone/plugins/: monitor.py  update_pad_id.py
drone/utils/: detect_obs_height.py  dir_relative.py  directions_funcs.py  do_operation.py  execute.py  get_config.py  go_to_pad.py  init_drone.py
src/: index.py  lib.py  main.py  utils.py  wifi.py
