[tool.poetry]
name = "drone"
version = "0.1.0"
description = ""
authors = ["wcyat <wcyat@wcyat.me>"]

[tool.poetry.dependencies]
python = "^3.10"
djitellopy = "^2.4.0"
python-dotenv = "^0.21.0"
wheel = "^0.38.4"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
docker-arm64 = "docker buildx build . --platform=linux/arm64 -t wcyat/drone"
docker = "docker build . -t wcyat/drone"
start = "python3 src/index.py"
wifi = "python3 src/wifi.py"
