[tool.poetry]
name = "drone"
version = "0.1.0"
description = ""
authors = ["wcyat <wcyat@wcyat.me>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
djitellopy-reduced = "^2.4.0"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
docker_arm64 = "drone.scripts:docker_arm64"
docker_arm64_qemu = "drone.scripts:docker_arm64_qemu"
docker_i386 = "drone.scripts:docker_i386"
docker_i386_qemu = "drone.scripts:docker_i386_qemu"
docker_amd64 = "drone.scripts:docker_amd64"
docker_amd64_qemu = "drone.scripts:docker_amd64_qemu"
docker = "drone.scripts:docker"
start = "drone.scripts:main"
wifi = "drone.scripts:wifi"
land = "drone.scripts:land"
emergency = "drone.scripts:emergency"
